fix(frontend): make layouts great again (unless overflowing)

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -56,9 +56,9 @@ button {
 	cursor: pointer;
 }
 
+html,
 body {
-	width: 100%;
-	height: 100dvh;
+	height: 100%;
 	font-family: "NunitoSans";
 }
 
